cmake_minimum_required(VERSION 3.0 FATAL_ERROR)

project(Stuff VERSION 0.1.0 LANGUAGES CXX)

add_custom_target(Stuff)

add_subdirectory(noclip)
add_subdirectory(qol)
add_subdirectory(rainbow-icons)
add_subdirectory(unlock-all)
add_subdirectory(fps-bypass)
add_subdirectory(no-progress)
add_subdirectory(anticheat)
add_subdirectory(no-transition)
add_subdirectory(startpos-switch)